--- a/index.html
+++ b/index.html
@@ -15,21 +15,19 @@
             <img src="assets/Logotipo white.png" alt="">
         </div>
 
-        <div id="container-hud">
+        <nav id="container-hud">
             <ul>
                 <li><a href="#">Registrar</a></li>
                 <li><a href="#">Entrar</a></li>
             </ul>
-        </div>
+        </nav>
 
     </header>
 
     <main>
         <p>Conteudo principal</p>
 
-        <section class="sessoes">
-
-        </section>
+        <section class="sessoes"></section>
     </main>
 
     <footer>
