--- a/sobreNos.html
+++ b/sobreNos.html
@@ -12,9 +12,9 @@
 
 <body>
     <header>
-        <a href="sobreNos.html" id="container-logo">
+        <div id="container-logo">
             <img src="assets/Logotipo white.png" alt="Logotipo da Pixel Library">
-        </a>
+        </div>
 
         <nav id="container-hud">
             <ul>
@@ -26,24 +26,11 @@
     </header>
 
     <main>
-
-        <section id="container-GameInfo">
-            <div id="bloco1">
-                <div id="capaDoJogo"></div>
-                <div id="avaliaçãoGeral"></div>
-            </div>
-
-            <div id="bloco2">
-                <div id="tituloDoJogo"></div>
-                <div id="data"></div>
-                <div id="avaliacao"></div>
-            </div>
-        </section>
-
+        <p>Conteudo principal</p>
     </main>
 
     <footer>
-        <p>Rodapé do site</p>
+        <p>Este projeto é apenas ilustrativo. Estas páginas foram desenvolvidas como atividade da Disciplina Programação para Web II.</p>
     </footer>
 </body>
 
