--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
         <section id="container-GameInfo">
             <div id="bloco1">
-                <div id="capaDoJogo"></div>
-                <div id="avaliaçãoGeral"></div>
+                <div id="capaDoJogo">.</div>
+                <div id="avaliaçãoGeral">.</div>
             </div>
 
             <div id="bloco2">
-                <div id="tituloDoJogo"></div>
-                <div id="data"></div>
-                <div id="avaliacao"></div>
+                <div id="tituloDoJogo">.</div>
+                <div id="data">.</div>
+                <div id="avaliacao">.</div>
             </div>
         </section>
 
