--- a/index.html
+++ b/index.html
@@ -29,14 +29,22 @@
 
         <section id="container-GameInfo">
             <div id="bloco1">
-                <div id="capaDoJogo">.</div>
-                <div id="avaliaçãoGeral">.</div>
+                <div id="capaDoJogo"></div>
+                <div id="avaliaçãoGlobal" class="text-page"></div>
             </div>
 
             <div id="bloco2">
-                <div id="tituloDoJogo">.</div>
-                <div id="data">.</div>
-                <div id="avaliacao">.</div>
+                <div id="descricaoCompleta">
+                    <!-- <h2>R.E.P.O</h2>
+
+                    <p>released on Feb 26, 2025 by semiwork</p>
+
+                    <br>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, dignissimos! Vel ea quae voluptates! Corrupti animi error eos dicta voluptatibus esse unde quaerat voluptatum obcaecati consectetur, eveniet perspiciatis consequatur autem tenetur adipisci deserunt nostrum laborum. Dolore sapiente, beatae ducimus eos assumenda quaerat quos at quia. Inventore quibusdam cum reprehenderit modi ipsam tenetur quos voluptas deserunt perferendis, voluptates ullam beatae molestiae excepturi nam minus repudiandae saepe fugiat quae exercitationem dicta maxime nulla! Nobis id veritatis excepturi aliquam voluptates optio quam tempora eaque magni et, molestiae unde aspernatur qui deserunt iste in deleniti officia delectus repellendus quidem saepe reprehenderit? Quod iure aut similique. Amet alias suscipit quia, eaque debitis nesciunt aperiam quidem et, illo fuga excepturi fugit consequatur eius sit est ea?</p> -->
+                </div>
+
+                <div id="avaliacao" class="text-page"></div>
             </div>
         </section>
 
