--- a/sobreNos.html
+++ b/sobreNos.html
@@ -26,7 +26,11 @@
     </header>
 
     <main>
-        <p>Conteudo principal</p>
+        <h1>Sobre Nós</h1>
+        <br>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod a sequi quia ea beatae commodi deleniti nostrum voluptate cupiditate! Ullam!</h2>
+        <br>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, eius! Reiciendis eos vero impedit, nemo repellendus voluptatibus ut quam, in, quo maiores expedita! Aspernatur, veniam exercitationem? Eos, nulla dicta. Incidunt corporis a, repudiandae quae est nesciunt eligendi illum in! Corrupti cum aperiam atque accusamus culpa blanditiis ad eaque quia laborum!</p>
     </main>
 
     <footer>
