--- a/sobreNos.html
+++ b/sobreNos.html
@@ -6,35 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-sobreNos.css">
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <title>Pixel Library</title>
 </head>
 
 <body>
     <header>
-        <div id="container-logo">
-            <img src="assets/Logotipo white.png" alt="Logotipo da Pixel Library">
-        </div>
-
-        <nav id="container-hud">
-            <ul>
-                <li><a href="login.html">Registrar</a></li>
-                <li><a href="login.html">Entrar</a></li>
-            </ul>
+        <a href="sobreNos.html" id="container-logo">
+          <img src="assets/Logotipo white.png" alt="Logotipo da Pixel Library">
+        </a>
+      
+        <nav id="container-nav">
+          <ul>
+            <li><a href="login.html">Registrar</a></li>
+            <li><a href="login.html">Entrar</a></li>
+          </ul>
         </nav>
-
     </header>
 
-    <main>
-        <h1>Sobre Nós</h1>
-        <br>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod a sequi quia ea beatae commodi deleniti nostrum voluptate cupiditate! Ullam!</h2>
-        <br>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, eius! Reiciendis eos vero impedit, nemo repellendus voluptatibus ut quam, in, quo maiores expedita! Aspernatur, veniam exercitationem? Eos, nulla dicta. Incidunt corporis a, repudiandae quae est nesciunt eligendi illum in! Corrupti cum aperiam atque accusamus culpa blanditiis ad eaque quia laborum!</p>
-    </main>
+    <main></main>
 
     <footer>
-        <p>Este projeto é apenas ilustrativo. Estas páginas foram desenvolvidas como atividade da Disciplina Programação para Web II.</p>
+        <div id="footer-content">
+            <p>Este projeto é apenas ilustrativo. Estas páginas foram desenvolvidas como atividade da Disciplina Programação para Web II.</p>
+        </div>
     </footer>
 </body>
 
