--- a/sobreNos.html
+++ b/sobreNos.html
@@ -2,36 +2,37 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-sobreNos.css">
-    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
-    <title>Pixel Library</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style-sobreNos.css">
+  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+  <title>Pixel Library</title>
 </head>
 
 <body>
-    <header>
-        <a href="sobreNos.html" id="container-logo">
-          <img src="assets/Logotipo white.png" alt="Logotipo da Pixel Library">
-        </a>
-      
-        <nav id="container-nav">
-          <ul>
-            <li><a href="login.html">Registrar</a></li>
-            <li><a href="login.html">Entrar</a></li>
-          </ul>
-        </nav>
-    </header>
+  <header>
+    <a href="sobreNos.html" id="container-logo">
+      <img src="assets/Logotipo white.png" alt="Logotipo da Pixel Library">
+    </a>
 
-    <main></main>
+    <nav id="container-nav">
+      <ul>
+        <li><a href="login.html">Registrar</a></li>
+        <li><a href="login.html">Entrar</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <footer>
-        <div id="footer-content">
-            <p>Este projeto é apenas ilustrativo. Estas páginas foram desenvolvidas como atividade da Disciplina Programação para Web II.</p>
-        </div>
-    </footer>
+  <main></main>
+
+  <footer>
+    <div id="footer-content">
+      <p>Este projeto é apenas ilustrativo. Estas páginas foram desenvolvidas como atividade da Disciplina Programação
+        para Web II.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
