--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
   <main>
     <section id="container-pesquisa">
       <div id="filtros">
-        <!-- <p>teste</p> -->
-        <!-- <p>teste2</p> -->
-        <!-- <p>teste3</p> -->
+        <p>campo de pesquisa</p>
+        <p>lista horizontal dos filtros disponiveis</p>
       </div>
     </section>
 
@@ -36,48 +35,46 @@
       <h2>Novidades</h2>
 
       <div class="grid-jogos">
-        <div class="card-jogo">
+        <article class="card-jogo">
           <img src="assets/gameLogo/jogo1.jpg" alt="Capa do jogo 1">
-        </div>
+        </article>
 
-        <div class="card-jogo">
+        <article class="card-jogo">
           <img src="assets/gameLogo/jogo2.jpg" alt="Capa do jogo 2">
-        </div>
+        </article>
 
-        <div class="card-jogo">
+        <article class="card-jogo">
           <img src="assets/gameLogo/jogo3.jpg" alt="Capa do jogo 3">
-        </div>
+        </article>
 
-        <div class="card-jogo" id="game4">
+        <article class="card-jogo" id="game4">
           <img src="assets/gameLogo/jogo4.jpg" alt="Capa do jogo 4">
-        </div>
+        </article>
 
-        <div class="card-jogo" id="game5">
+        <article class="card-jogo" id="game5">
           <img src="assets/gameLogo/jogo5.jpg" alt="Capa do jogo 5">
-        </div>
+        </article>
       </div>
     </section>
 
     <section id="suasRecomendações">
       <h2>Recomendações</h2>
 
-      <div class="grid-jogos-recomendacoes">
-        <div class="card-jogo-recomendacoes">
+      <div class="grid-jogos recomendacoes">
+        <article class="card-jogo">
           <img src="assets/gameLogo/jogo1.jpg" alt="Capa do jogo 1">
-        </div>
+        </article>
 
-        <div class="card-jogo-recomendacoes">
+        <article class="card-jogo">
           <img src="assets/gameLogo/jogo2.jpg" alt="Capa do jogo 2">
-        </div>
+        </article>
 
-        <div class="card-jogo-recomendacoes">
+        <article class="card-jogo">
           <img src="assets/gameLogo/jogo3.jpg" alt="Capa do jogo 3">
-        </div>
-
+        </article>
       </div>
     </section>
   </main>
-
 
   <footer>
     <div id="footer-content">
