--- a/index.html
+++ b/index.html
@@ -24,10 +24,18 @@
   </header>
 
   <main>
+
     <section id="container-pesquisa">
+      <form id="form-busca" role="search">
+        <input type="search" id="campo-busca" name="busca" placeholder="Buscar jogos..." autocomplete="off"/>
+      </form>
+
       <div id="filtros">
-        <p>campo de pesquisa</p>
-        <p>lista horizontal dos filtros disponiveis</p>
+        <h3>Pesquisar por:</h3>
+        <button type="button">Indie</button>
+        <button type="button">Multiplayer</button>
+        <button type="button">Aventura</button>
+        <button type="button">RPG</button>
       </div>
     </section>
 
